[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-benchmark-mcp-server"
version = "0.1.0"
description = "MCP Server for LLM comparison, benchmarks, and pricing — find the best model for any task"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AiAgentKarl"}
]
keywords = ["mcp", "llm", "benchmark", "ai", "comparison", "pricing", "openrouter", "chatbot-arena"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/llm-benchmark-mcp-server"
Repository = "https://github.com/AiAgentKarl/llm-benchmark-mcp-server"
Issues = "https://github.com/AiAgentKarl/llm-benchmark-mcp-server/issues"

[project.scripts]
benchmark-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
